--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
   compileSdkVersion rootProject.ext.compileSdkVersion
@@ -26,8 +27,7 @@ dependencies {
   compile "com.android.support:appcompat-v7:$rootProject.ext.supportLibraryVersion"
   compile "com.android.support:design:$rootProject.ext.supportLibraryVersion"
   compile "com.jakewharton:butterknife:$rootProject.ext.butterknifeVersion"
+  apt "com.jakewharton:butterknife-compiler:$rootProject.ext.butterknifeVersion"
   compile "com.squareup.picasso:picasso:$rootProject.ext.picassoVersion"
-
   compile project(':instacapture')
-
 }
