--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,10 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.1.0'
-    classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
-
+    classpath 'com.android.tools.build:gradle:2.2.0'
+    classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+    classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
+    classpath 'com.google.gms:google-services:3.0.0'
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
   }
@@ -27,16 +28,16 @@ task clean(type: Delete) {
 // Define versions in a single place
 ext {
   // Sdk and tools
-  minSdkVersion = 14
-  targetSdkVersion = 23
-  compileSdkVersion = 23
-  buildToolsVersion = '23.0.2'
+  minSdkVersion = 10
+  targetSdkVersion = 24
+  compileSdkVersion = 24
+  buildToolsVersion = '24.0.2'
 
   // Dependencies versions
-  supportLibraryVersion = '23.4.0'
-  butterknifeVersion = '7.0.1'
+  supportLibraryVersion = '24.2.1'
+  butterknifeVersion = '8.4.0'
   picassoVersion = '2.5.2'
   rxandroidVersion = '1.2.0'
-  rxjavaVersion = '1.1.5'
+  rxjavaVersion = '1.1.9'
   junitVersion = '4.12'
 }
