--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tarek360.sample">
 
+  <uses-permission android:name="android.permission.CAMERA" />
 
   <application
       android:allowBackup="true"
@@ -73,6 +74,15 @@
           android:value="com.tarek360.sample.MainActivity"/>
     </activity>
 
+    <activity
+        android:name=".TextureViewSampleActivity"
+        android:label="@string/sample_texture_view"
+        android:parentActivityName=".MainActivity"
+        android:theme="@style/AppTheme">
+      <meta-data
+          android:name="android.support.PARENT_ACTIVITY"
+          android:value="com.tarek360.sample.MainActivity"/>
+    </activity>
 
     <meta-data
         android:name="com.google.android.geo.API_KEY"
