--- a/instacapture/build.gradle
+++ b/instacapture/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 
   compile "io.reactivex.rxjava2:rxandroid:$rootProject.ext.rxandroidVersion"
   compile "io.reactivex.rxjava2:rxjava:$rootProject.ext.rxjavaVersion"
+  compile "com.github.akarnokd:rxjava2-interop:$rootProject.ext.rxjava2interopVersion"
 
 
   // Dependencies for local unit tests
