--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,7 @@
 *.apk
 .gradle
 /local.properties
-/.idea/misc.xml
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/libraries
-/.idea/vcs.xml
+.idea/
 .DS_Store
 /build
 /captures
